--- a/popup.html
+++ b/popup.html
@@ -4,19 +4,86 @@
   <title>Amazon Rewards</title>
   <style>
     body {
-      width: 300px;
-      padding: 10px;
+      width: 350px;
+      padding: 15px;
       font-family: Arial, sans-serif;
     }
     .container {
       text-align: center;
+    }
+    .credits-container {
+      margin-top: 15px;
+      padding: 10px;
+      border-radius: 5px;
+      background-color: #f8f8f8;
+    }
+    .credit-entry {
+      margin: 10px 0;
+      padding: 10px;
+      border-bottom: 1px solid #eee;
+    }
+    .credit-entry:last-child {
+      border-bottom: none;
+    }
+    .credits-amount {
+      font-size: 20px;
+      font-weight: bold;
+      color: #FF9900;
+      margin: 5px 0;
+    }
+    .expiry-date {
+      font-size: 14px;
+      color: #666;
+    }
+    .expiry-soon {
+      color: #d00;
+    }
+    .loading {
+      color: #666;
+      font-style: italic;
+    }
+    .error {
+      color: #d00;
+      margin-top: 10px;
+    }
+    .refresh-button {
+      margin-top: 10px;
+      padding: 8px 16px;
+      background-color: #FF9900;
+      color: white;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+    .refresh-button:hover {
+      background-color: #e68a00;
+    }
+    .total-credits {
+      margin-top: 15px;
+      padding-top: 10px;
+      border-top: 2px solid #eee;
+      font-weight: bold;
     }
   </style>
 </head>
 <body>
   <div class="container">
     <h2>Amazon Rewards</h2>
-    <p>Welcome to Amazon Rewards extension!</p>
+    <div class="credits-container">
+      <div id="loading" class="loading">Loading credits...</div>
+      <div id="credits" style="display: none;">
+        <div id="creditsList">
+          <!-- Credit entries will be inserted here -->
+        </div>
+        <div id="totalCredits" class="total-credits">
+          Total Credits: <span id="totalAmount">$0.00</span>
+        </div>
+      </div>
+      <div id="error" class="error" style="display: none;">
+        Unable to load credits. Please try again.
+      </div>
+    </div>
+    <button id="refreshButton" class="refresh-button">Refresh Credits</button>
   </div>
   <script src="popup.js"></script>
 </body>
