testing and refresh

--- a/test-data.html
+++ b/test-data.html
@@ -62,10 +62,10 @@
     <p>Digital content and services</p>
   </div>
 
-  <!-- <div class="reward-item">
+  <div class="reward-item">
     <p>$3.00 expires on November 5, 2026</p>
     <p>Digital content and services</p>
-  </div> -->
+  </div>
   
   
   <!-- Add more test data as needed -->
