--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Amazon Rewards</title>
+  <title>Amazon Digital Rewards</title>
   <style>
     body {
       width: 350px;
