--- a/test-data.html
+++ b/test-data.html
@@ -42,10 +42,10 @@
   
   <h2>Your No-Rush Rewards</h2>
   
-  <div class="reward-item">
+  <!-- <div class="reward-item">
     <p>$5.00 expires on May 15, 2025</p>
     <p>Digital content and services</p>
-  </div>
+  </div> -->
   
   <div class="reward-item">
     <p>$3.50 expires on July 15, 2025</p>
@@ -62,10 +62,10 @@
     <p>Digital content and services</p>
   </div>
 
-  <div class="reward-item">
+  <!-- <div class="reward-item">
     <p>$3.00 expires on November 5, 2026</p>
     <p>Digital content and services</p>
-  </div>
+  </div> -->
   
   
   <!-- Add more test data as needed -->
