--- a/popup.html
+++ b/popup.html
@@ -127,8 +127,9 @@
     }
     .nav-buttons {
       display: flex;
-      justify-content: space-between;
+      justify-content: flex-end;
       margin-top: 10px;
+      gap: 10px;
     }
     .settings-container {
       display: none;
